--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,28 @@
     font-size: 120%;
 }
 
+form#searchform {
+    margin-bottom: 0;
+}
+
+button#searchGoButton {
+    height: 30px;
+}
+
+button#searchSearchButton {
+    height: 30px;
+}
+
+h1#main_title {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+#nav_icon {
+    line-height: 1.4rem;
+    margin: 0;
+}
+
 .font-size-2 {
     font-size: 140%;
 }
