--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@ h1#main_title {
     margin: 0;
 }
 
+a.navbar-brand {
+    width: auto;
+    margin-right: 20px;
+}
+
 .font-size-2 {
     font-size: 140%;
 }
