--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,42 @@
     margin-left: 5px;
 }
 
+li {
+    margin-left: 10px;
+}
+
 #cate {
     width: 100%;
     border: 1px solid #777;
     padding: 5px;
     margin-top: 1em;
+}
+
+select {
+    display: inline-block;
+    padding: 0.2rem 0.4rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #55595c;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: .25rem;
+}
+
+#preview {
+    background: #37b1e3;
+    color: white;
+}
+
+#preview:hover {
+    background: #2b90ba;
+}
+
+input {
+    border: 1px solid #e1e8ed;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 .font-size-1 {
