--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@
 }
 
 li {
-    margin-left: 10px;
+    margin-left: 20px;
+}
+
+.btn.btn-secondary.tools-btn.dropdown-toggle {
+    height: 34px;
 }
 
 #cate {
@@ -63,11 +67,6 @@ button#searchSearchButton {
 h1#main_title {
     margin-bottom: 0;
     margin-top: 0;
-}
-
-#nav_icon {
-    line-height: 1.4rem;
-    margin: 0;
 }
 
 a.navbar-brand {
