--- a/css/default.css
+++ b/css/default.css
@@ -84,6 +84,7 @@ pre {
     border: 1px solid #e1e8ed;
     border-radius: 0.35rem;
     padding: 0.8rem;
+    white-space: pre-wrap;
 }
 
 a:focus {
