--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,14 @@ li {
     height: 34px;
 }
 
+#inside {
+    color: green;
+}
+
+.form-actions {
+    float: right;
+}
+
 .hljs {
     background: #f5f8fa;
 }
