--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ li {
     height: 34px;
 }
 
+sub, sup {
+    line-height: 1.6rem;
+}
+
 #inside {
     color: green;
 }
@@ -219,7 +223,7 @@ div.scroll-buttons a {
 }
 
 #footnote-list {
-    margin-bottom: -10px;
+    margin-bottom: -20px;
     display: block;
 }
 
