--- a/css/style.css
+++ b/css/style.css
@@ -383,3 +383,15 @@ h1, h2, h3, h4, h5, h6 {
     max-height: 30%;
     overflow-y: scroll;
 }
+
+input {
+    width: 100%;
+}
+
+input[type="checkbox"] {
+    width: auto;
+}
+
+.btn {
+    border: 0;
+}
