--- a/css/style.css
+++ b/css/style.css
@@ -91,62 +91,7 @@ a.navbar-brand {
     margin-right: 20px;
 }
 
-#open:hover {
-    color: black;
-    background: white;
-    border: 1px solid #ccc;
-}
-
-.font-size-2 {
-    font-size: 140%;
-}
-
-.font-size-3 {
-    font-size: 160%;
-}
-
-.font-size-4 {
-    font-size: 180%;
-}
-
-.font-size-5 {
-    font-size: 200%;
-}
-
-.font-size-small-1 {
-    font-size: 85%;
-}
-
-.font-size-small-2 {
-    font-size: 70%;
-}
-
-.font-size-small-3 {
-    font-size: 55%;
-}
-
-.font-size-small-4 {
-    font-size: 40%;
-}
-
-.font-size-small-5 {
-    font-size: 25%;
-}
-
-td:hover {
-    background: #ddd;
-}
-
-ref {
-    background-color: #efefef;
-    color: #555555;
-    border: 1px solid #cecece;
-    font-size: 0.8rem;
-    margin-left: 0.1rem;
-    margin-right: 0.2rem;
-}
-
-iframe {
+img, iframe {
     max-width: 100%;
 }
 
@@ -163,10 +108,6 @@ blockquote {
     background-size:25px;
 }
 
-img {
-    max-width: 100%;
-}
-
 td {
     padding: 3px 8px 3px 8px;
     border: 1px solid #dddddd;
@@ -174,10 +115,6 @@ td {
 
 table {
     background-color: #f5f5f5;
-}
-
-not_del {
-    display: none;
 }
 
 #toc {
@@ -198,11 +135,9 @@ s, strike, del {
 }
 
 s:hover, strike:hover, del:hover {
-    color:#666;background-color:#eee;text-decoration:none;
-}
-
-.scroll-buttons a:link, .scroll-buttons a:visited {
-    color: white;
+    color:#666;
+    background-color:#eee;
+    text-decoration:none;
 }
 
 div.scroll-buttons a {
@@ -241,10 +176,6 @@ div.scroll-buttons {
     opacity: 0.8;
 }
 
-table {
-    font-size: 13px;
-}
-
 .scroll-buttons .fa {
     margin-top: 5px;
 }
@@ -266,17 +197,12 @@ table {
     background-color: #f3c2c2;
 }
 
+#toron_color_blue {
+    background: #c1ebff;
+}
+
 #toron_color {
     background-color: #d5d5d5;
-}
-
-#bb {
-    background: #a28a7e;
-    color: white;
-}
-
-#history {
-    margin-right: 10px;
 }
 
 .popup {
@@ -291,22 +217,6 @@ table {
     z-index: 10000;
     max-height: 30%;
     overflow-y: scroll;
-}
-
-.foot {
-    position: fixed;
-    bottom: 0px;
-    padding: 10px;
-    width: 100%;
-    background: white none repeat scroll 0% 0%;
-    left: 0px;
-    border: 1px solid #ccc;
-    text-align: center;
-    z-index: 10000;
-}
-
-#bl {
-    background: gainsboro;
 }
 
 @media (max-width: 768px) {
@@ -349,6 +259,12 @@ a.out_link::before {
     color: white;
 }
 
+#open:hover {
+    color: black;
+    background: white;
+    border: 1px solid #ccc;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
     margin-top: 10px;
@@ -357,28 +273,6 @@ h1, h2, h3, h4, h5, h6 {
 .navbar-brand {
     margin: auto;
     font-size: 28px;
-}
-
-#block {
-    background: gainsboro;
-}
-
-#toron_color_blue {
-    background: #c1ebff;
-}
-
-.foot {
-    position: fixed;
-    bottom: 0px;
-    padding: 10px;
-    width: 100%;
-    background: white none repeat scroll 0% 0%;
-    left: 0px;
-    border: 1px solid #ccc;
-    text-align: center;
-    z-index: 10000;
-    max-height: 30%;
-    overflow-y: scroll;
 }
 
 input {
