--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,7 @@ button#save {
     border-color: #0275d8;
     color: white;
     font-weight: bold;
+    margin-right: 5px;
 }
 
 button#save:hover {
@@ -316,6 +317,7 @@ button#come {
     background-color: #f0ad4e;
     border-color: #f0ad4e;
     color: white;
+    margin-left: 5px;
 }
 
 button#come:hover {
