상단바를 고정해서 버그 수정

--- a/css/style.css
+++ b/css/style.css
@@ -293,3 +293,7 @@ button#come:hover {
 #left {
     margin-right: -8px;
 }
+
+.navbar-fixed-bottom, .navbar-fixed-top {
+    position: absolute;
+}
