--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,5 @@
-#in {
-    margin-left: 20px;
-}
-
-#out {
-    margin-left: 5px;
-}
-
-li {
-    margin-left: 20px;
-}
-
 .btn.btn-secondary.tools-btn.dropdown-toggle {
     height: 34px;
-}
-
-sub, sup {
-    line-height: 1.6rem;
-}
-
-#inside {
-    color: green;
 }
 
 .hljs {
@@ -72,96 +52,113 @@ a.navbar-brand {
     margin-right: 20px;
 }
 
-img, iframe {
-    max-width: 100%;
-}
-
 blockquote {
     border-left: 5px solid #4188F1;
 }
 
 td {
-    padding: 3px 8px 3px 8px;
-    border: 1px solid #dddddd;
+    padding: 0.3rem 0.6rem;
 }
 
-table {
-    background-color: #f5f5f5;
+pre {
+    padding: 0;
 }
 
-#toc {
-    border: 1px solid #ccc;
-    display: inline-block;
-    padding: 20px;
-    font-size: 15px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+#toc, .opennamu_TOC {
+    border: 1px solid #e1e8ed;
+
+    border-top-right-radius: 0.35rem;
+    border-top-left-radius: 0.35rem;
+
+    border-bottom-right-radius: 0.35rem;
+    border-bottom-left-radius: 0.35rem;
+
+    padding: 0.6rem 1.2rem;
 }
 
-#toc-name {
-    font-size: 18px;
-}
+#toc-name, .opennamu_TOC_title {
+    font-size: 1.2rem;
+    font-weight: bold;
 
-s, strike, del {
-    color:gray;
-}
+    display: block;
 
-s:hover, strike:hover, del:hover {
-    color:#666;
-    background-color:#eee;
-    text-decoration:none;
+    width: calc(100% + 40px);
+    
+    margin-left: -20px;
+    margin-top: -10px;
+    margin-bottom: -40px;
+
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    
+    background-color: #f5f8fa;
+    
+    border: 1px solid #e1e8ed;
+    border-top-right-radius: 0.35rem;
+    border-top-left-radius: 0.35rem;
 }
 
 div.scroll-buttons a {
     display: inline-block;
+    
     width: 45px;
     height: 45px;
+    
     padding: 5px 8px 9px 8px;
-    border: 1px solid #545454;
-    border-left: 0;
+    
     text-decoration: none;
     text-align: center;
-    background: rgba(26,26,26,0.9);
+    
+    background-color: #4188f1;
     border-bottom: 0;
+
     color: white;
+}
+
+#scroll-button-toc {
+    border-top-left-radius: 0.35rem;
+}
+
+#scroll-button-right {
+    border-top-right-radius: 0.35rem;
+}
+
+#scroll-button-right, #scroll-button-left {
+    border-left: 1px solid white;
+}
+
+#scroll-button-toc {
+    margin-right: -8px;
+}
+
+#scroll-button-left {
+    margin-right: -8px;
 }
 
 div.scroll-buttons {
     position: fixed;
+
     float: right;
+    
     height: 45px;
+    
     text-align: right;
     font-size: 1.7em;
+    
     z-index: 10000;
+    
     margin-bottom: -10px;
+    
     bottom: 10px;
     right: 0px;
-    opacity: 0.8;
 }
 
 .scroll-buttons .fa {
     margin-top: 5px;
 }
 
-@media (max-width: 768px) {
-    table {
-        min-width: 100%;
-    }
-}
-
-textarea {
-    width: 100%;
-}
-
-#not_thing {
-    color: #bf4c4c;
-}
-
-#out_link {
-    color: #008000;
-}
-
-#out_link::before {
+#out_link::before, .opennamu_link_out::before {
     padding: 0px;
     background: transparent;
     color: green;
@@ -181,14 +178,6 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 28px;
 }
 
-input {
-    width: 100%;
-}
-
-input[type="checkbox"] {
-    width: auto;
-}
-
 button {
     border: 1px solid #aaa;
     padding: 5px 10px 5px 10px;
@@ -200,25 +189,25 @@ button:hover {
     background-color: white;
 }
 
-button#save {
+button#save, button#opennamu_save_button {
     background-color: #0275d8;
     border-color: #0275d8;
     color: white;
     margin-right: 5px;
 }
 
-button#save:hover {
+button#save:hover, button#opennamu_save_button:hover {
     background-color: #025aa5;
     border-color:#025aa5;
 }
 
-button#preview {
+button#preview, button#opennamu_preview_button {
     background-color: #5bc0de;
     border-color: #5bc0de;
     color: white;
 }
 
-button#preview:hover {
+button#preview:hover, button#opennamu_preview_button:hover {
     background-color: #31b0d5;
     border-color: #31b0d5;
     color: white;
@@ -237,26 +226,21 @@ button#come:hover {
     color: white;
 }
 
-.scroll-toc {
-    margin-right: -8px;
-}
-
-#left {
-    margin-right: -8px;
-}
-
 .navbar-fixed-bottom, .navbar-fixed-top {
     position: absolute;
 }
 
-#cate, #redirect {
+#cate, .opennamu_category, #redirect {
     border: 1px solid #e1e8ed;
+    border-radius: 0.35rem;
+
     padding: 0.4rem;
     padding-left: 1rem;
+    
     box-shadow: 0.15rem 0.15rem 0 0 #cfdae2;
-    margin-bottom: 0.8rem;
-    border-radius: 0.35rem;
+    
     display: inline-block;
+    
     width: 100%;
 }
 
