--- a/css/default.css
+++ b/css/default.css
@@ -78,7 +78,7 @@ pre {
     word-break: break-all;
     word-wrap: break-word;
     background-color: #f5f8fa;
-    border: 1px solid var(--border-color);;
+    border: 1px solid var(--border-color);
     border-radius: 0.35rem;
     padding: 0.8rem;
     white-space: pre-wrap;
@@ -122,12 +122,12 @@ input[type=search] {
 
 textarea {
     width: 100%;
-    border: 1px solid var(--border-color);;
+    border: 1px solid var(--border-color);
     padding: 0.5rem;
 }
 
 hr {
-    border-top: 1px solid var(--border-color);;
+    border-top: 1px solid var(--border-color);
 }
 
 
@@ -219,14 +219,14 @@ del, s, strike {
     height: 2rem;
     width: 10.8rem;
     padding: 0.2rem 0.4rem;
-    border-color: var(--border-color);;
+    border-color: var(--border-color);
     border-radius: 0;
     border-top-left-radius: 0.35rem;
     border-bottom-left-radius: 0.35rem;
 }
 
 .Liberty .nav-wrapper .navbar .form-inline .form-control:focus {
-    border-right-color: var(--border-color);;
+    border-right-color: var(--border-color);
 }
 
 .Liberty .nav-wrapper .navbar .form-inline .btn {
@@ -284,7 +284,7 @@ del, s, strike {
     height: 2rem;
     border-radius: 0.35rem;
     margin: 0;
-    border: 1px solid var(--border-color);;
+    border: 1px solid var(--border-color);
 }
 
 .Liberty .nav-wrapper .navbar .navbar-login .logout-btn {
@@ -308,7 +308,7 @@ del, s, strike {
 }
 
 .Liberty .nav-wrapper .navbar .navbar-login .login-dropdown-menu:before {
-    border-bottom-color: var(--border-color);;
+    border-bottom-color: var(--border-color);
     border-width: 0.8rem;
     left: auto;
     right: 1.15rem;
