--- a/css/style.css
+++ b/css/style.css
@@ -270,3 +270,11 @@ ul#live-recent-list li {
     border-top-left-radius: 0;
     border-top-right-radius: 0.35rem;
 }
+
+.Liberty .content-wrapper .liberty-content .liberty-content-main {
+    overflow: visible;
+}
+
+th[rowspan], td[rowspan] {
+    position: initial;
+}
