--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,10 @@
-/* 색을 바꾸고 싶으시다면 :root 밑에 있는 사용자 지정 CSS 속성을 변경하세요. */
 :root {
-    --main-color: #4188f1;
-    --border-color: #e1e8ed;
+    --main-color: #F74646; /* 스킨 메인 색입니다. 위키 대표 색을 추천드립니다. */
+    --sub-color: #F97A7A; /* 네비바 마우스 호버했을 때 표시되는 색상입니다. 메인 색에서 채도를 약간 뺀 색상을 추천드립니다. */
+    --border-color: #e1e8ed; /* 이 색상부터는 수정 안 하셔도 됩니다. */
 }
+
+/* 태그 수정 */
 * {
     outline: none;
 
@@ -118,6 +120,7 @@ th[rowspan]:after, td[rowspan]:after {
 
 input[type=search] {
     -webkit-appearance: none; /* iOS 잡다한 css설정 제거 */
+    appearance: none;
 }
 
 textarea {
@@ -149,14 +152,14 @@ del, s, strike {
 .Liberty {
     background-color: #f5f5f5;
 }
-/* 백그라운드 색 지정 End*/
+/* 백그라운드 색 지정 End */
 
-/* 컨텐츠 넓이 수정 및 가운대 정렬 */
+/* 컨텐츠 넓이 수정 및 가운데 정렬 */
 .Liberty .nav-wrapper .navbar, .Liberty .content-wrapper {
     max-width: 1200px;
     margin: 0 auto;
 }
-/* 컨텐츠 넓이 수정 및 가운대 정렬 End */
+/* 컨텐츠 넓이 수정 및 가운데 정렬 End */
 
 /* 네비 수정 */
 .Liberty .nav-wrapper {
@@ -439,7 +442,7 @@ del, s, strike {
     top: 25.73rem;
     width: 15rem;
 }
-    /* 오른쪽 메뉴 수정 End */
+/* 오른쪽 메뉴 수정 End */
 
 /* 컨텐츠 수정 */
 .Liberty .content-wrapper {
@@ -654,4 +657,4 @@ caption {
     color: #373a3c;
     caption-side: top;
 }
-/* 부트스트랩 커스텀 End*/
+/* 부트스트랩 커스텀 End */
