--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-:root {
-    --sub-color: #e1e8ed;
-}
-
 .btn.btn-secondary.tools-btn.dropdown-toggle {
     height: 34px;
 }
@@ -23,7 +19,7 @@ select {
 }
 
 input {
-    border: 1px solid var(--sub-color);
+    border: 1px solid var(--border-color);
     padding: 5px;
     border-radius: 3px;
 }
@@ -65,7 +61,7 @@ td {
 }
 
 #toc, .opennamu_TOC {
-    border: 1px solid var(--sub-color);
+    border: 1px solid var(--border-color);
 
     border-top-right-radius: 0.35rem;
     border-top-left-radius: 0.35rem;
@@ -94,7 +90,7 @@ td {
     
     background-color: #f5f8fa;
     
-    border: 1px solid var(--sub-color);
+    border: 1px solid var(--border-color);
     border-top-right-radius: 0.35rem;
     border-top-left-radius: 0.35rem;
 }
@@ -223,7 +219,7 @@ button#come:hover {
 }
 
 #cate, .opennamu_category, #redirect {
-    border: 1px solid var(--sub-color);
+    border: 1px solid var(--border-color);
     border-radius: 0.35rem;
 
     padding: 0.4rem;
