리버티 기본 색으로 수정

--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,7 @@
 :root {
-    --main-color: #F74646; /* 스킨 메인 색입니다. 위키 대표 색을 추천드립니다. */
-    --sub-color: #F97A7A; /* 네비바 마우스 호버했을 때 표시되는 색상입니다. 메인 색에서 채도를 약간 뺀 색상을 추천드립니다. */
-    --border-color: #e1e8ed; /* 이 색상부터는 수정 안 하셔도 됩니다. */
+    --main-color: #4188f1; /* 스킨 메인 색입니다. 위키 대표 색을 추천드립니다. */
+    --sub-color: #5997f3; /* 네비바 마우스 호버했을 때 표시되는 색상입니다. 메인 색에서 채도를 약간 뺀 색상을 추천드립니다. */
+    --border-color: #e1e8ed; /* 이 색상은 수정 안 하셔도 됩니다. */
 }
 
 /* 태그 수정 */
