CDN으로 바꿀 수 있는 것 전부 CDN으로 이전

--- a/css/style.css
+++ b/css/style.css
@@ -270,3 +270,7 @@ ul#live-recent-list li {
 th[rowspan], td[rowspan] {
     position: initial;
 }
+
+table {
+    background-color: transparent;
+}
