리버티 조회수 기능 추가

--- a/css/dark.css
+++ b/css/dark.css
@@ -6,7 +6,7 @@
     background-color: black;
 }
 
-.Liberty .content-wrapper .liberty-content .liberty-content-header .title>h1 {
+.Liberty .content-wrapper .liberty-content .liberty-content-header .title>h1, .title {
     color: #ddd;
 }
 
